server: added troubleshooting for out of memory exception.